# ComputerGraphics-Mesh-Simplification

./: .gitignore  CMakeLists.txt  OBJ_Loader.h  README.md  camera.hpp  gouraud_fs.txt  gouraud_vs.txt  imgui.ini  light_fs.txt  main  main.cpp  mesh.hpp  metrics.hpp  metro  model.hpp  model_fs.txt  model_vs.txt  results.txt  shader.hpp  simplification.hpp  topology_mesh.hpp
glad/include/glad/: gl.h
glad/src/: gl.c
models/: bunny_40k_metro.ply  test_metro.ply
models/QELegal/: bunny_13108_metro.ply  bunny_1364_metro.ply  bunny_25600_metro.ply  bunny_3440_metro.ply  bunny_6714_metro.ply
models/QELegalCurv/: bunny_13108_metro.ply  bunny_1358_metro.ply  bunny_25600_metro.ply  bunny_3440_metro.ply  bunny_6714_metro.ply
models/QELegalCurv_alpha/: bunny_0.01_metro.ply  bunny_0.032_metro.ply  bunny_0.065_metro.ply  bunny_0.254_metro.ply  bunny_1_metro.ply  bunny_2_metro.ply
models/RandomLegal/: bunny_13108_metro.ply  bunny_1410_metro.ply  bunny_25600_metro.ply  bunny_3440_metro.ply  bunny_6714_metro.ply
models/ShortestLegal/: bunny_13108_metro.ply  bunny_1440_metro.ply  bunny_25600_metro.ply  bunny_3440_metro.ply  bunny_6714_metro.ply
models/ShortestLegalCurv/: bunny_13108_metro.ply  bunny_1546_metro.ply  bunny_25600_metro.ply  bunny_3440_metro.ply  bunny_6714_metro.ply
